<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_page"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="Home"/>

    <item
        android:id="@+id/fav_page"

        android:enabled="true"
        android:icon="@drawable/heart1"
        android:title="@string/favorites"/>

    <item
        android:id="@+id/cat_page"
        android:enabled="true"
        android:icon="@drawable/nutrition"
        android:title="@string/places"/>
    <item
        android:id="@+id/search_page"
        android:enabled="true"
        android:icon="@drawable/search"
        android:title="Search"/>
    <item
        android:id="@+id/plan_page"
        android:enabled="true"
        android:icon="@drawable/task"
        android:title="@string/plan"/>


</menu>