<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/meal_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="156dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/rmealimg"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/rmealnameview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rmealimg" />

            <TextView
                android:id="@+id/rmealcatview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rmealnameview" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toturial"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:layout_constraintTop_toBottomOf="@+id/mealdesview"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/mealareaview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rmealcatview" />

            <TextView
                android:id="@+id/mealdesview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ingrv"
                android:layout_width="362dp"
                android:layout_height="183dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <WebView
                android:id="@+id/mealview"
                android:layout_width="305dp"
                android:layout_height="178dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7">

            </WebView>

            <ImageButton
                android:id="@+id/mealaddfav"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/circle_background"
                android:contentDescription="Favourate action button"
                android:src="@drawable/ic_favorite_selector"
                app:circularflow_defaultRadius="20dp"
                app:layout_constraintEnd_toEndOf="@+id/rmealimg"
                app:layout_constraintTop_toTopOf="parent"
                 />

            <ImageButton
                android:id="@+id/opencalendar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/circle_background"
                android:contentDescription="Favourate action button"
                android:src="@drawable/baseline_calendar_month_24"
                app:circularflow_defaultRadius="20dp"
                app:layout_constraintStart_toStartOf="@+id/rmealimg"
                app:layout_constraintTop_toTopOf="@+id/rmealimg" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingredients"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mealareaview" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/steps"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ingrv" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>